add datasize module

--- a/misc-progs/Makefile
+++ b/misc-progs/Makefile
@@ -1,4 +1,4 @@
-FILE = setconsole nbtest inp outp
+FILE = datasize setconsole nbtest inp outp
 
 KERNELDIR ?= /lib/modules/$(shell uname -r)/build
 INCLUDEDIR = $(KERNELDIR)/include
